# 1dsra

./: .editorconfig  .gitignore  .openclaw.code-workspace  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  DEEPSOIL_BASELINE_PARITY_RESEARCH.md  IMPLEMENTATION_STATUS.md  LICENSE  PARITY_MEMORY.md  PROJECT_MAP.md  Procfile  README.md  SCIENTIFIC_CONFIDENCE_MATRIX.md  deep-research-report.md  deep-research-report_15042026.md  parity_experiment_index.json  pyproject.toml  requirements.txt  start.sh  tmp_pdf_extract.txt  wsgi.py
.claude/: launch.json  settings.local.json
.codex/environments/: environment.toml
.github/workflows/: ci.yml  opensees-parity.yml  release.yml
benchmarks/core-eql/: README.md
benchmarks/core-es/: README.md
benchmarks/core-linear/: README.md
benchmarks/opensees-parity/: README.md
benchmarks/policies/: release_signoff.yml  release_signoff_deepsoil_manifest.sample.json
core/: CMakeLists.txt
core/src/: version.cpp
docker/: Dockerfile  docker-compose.yml
docs/: PM4_CALIBRATION_VALIDATION.md  RELEASE_SIGNOFF_CHECKLIST.md  StrataWave_Technical_Brief.md
examples/configs/: effective_stress.yml  effective_stress_strict_plus.yml  mkz_gqh_darendeli.yml  mkz_gqh_eql.yml  mkz_gqh_mock.yml  mkz_gqh_nonlinear.yml  pm4sand_calibration.yml  pm4silt_calibration.yml
examples/deepsoil_equivalent/: README.md  effective_stress_reference.yml  eql_reference.yml  linear_reference.yml  nonlinear_reference.yml
examples/motions/: DD1_AccTop_PS01x_TH.csv
examples/native/: deepsoil_gqh_5layer_baseline.yml  deepsoil_gqh_5layer_fitted_candidate.yml  deepsoil_gqh_5layer_literal.yml  eql_5layer_darendeli.yml  linear_3layer_sand.yml  nonlinear_gqh_graded.yml  nonlinear_mkz_clay.yml
examples/output/: wizard_generated.yml
examples/parity/: README.md  deepsoil_compare_manifest.sample.json
python/: setup.py
python/dsra1d/: __init__.py  (+13 more)
scripts/: build_deepsoil_example_parity_report.py  build_validation_bundle.py  build_validation_pack.py  check_changelog.py  check_fingerprint_alignment.py  check_release_policy_consistency.py  check_release_signoff.py  check_release_tag.py  opensees_pyshim.py  release_bump.py  run_calibration_sweep.py  run_release_deepsoil_compare.py  scaffold_deepsoil_compare_manifest.py  sweep_mkz_calibration.py
tests/: Results_profile_0_motion_Kocaeli-EL.xlsx  Results_profile_0_motion_Kocaeli.xlsx  test_benchmark.py  test_boundary_excitation.py  test_build_deepsoil_example_parity_report.py  test_calibration.py  test_changelog_script.py  test_cli.py  test_config.py  test_constitutive_debug.py  test_deepsoil_compare.py  test_fingerprint_alignment_script.py  test_frequency_domain_analytical.py  test_layer_response.py  test_linear_solver.py  test_materials_hysteretic.py  test_motion.py  test_mrdf_scenarios.py  test_newmark_nonlinear.py  test_nonlinear_hysteresis_path.py  test_nonlinear_solver.py  test_opensees_integration_optional.py  test_opensees_parse.py  test_opensees_runner.py  test_opensees_tcl.py  test_parity_docs_memory.py  test_pipeline.py  test_profile_diagnostics.py  test_release_policy_consistency_script.py  test_release_signoff_script.py  test_release_tag_script.py  test_report.py  test_run_release_deepsoil_compare_script.py  test_scaffold_deepsoil_compare_manifest.py  test_spectra.py  test_summary.py  test_validation_bundle_script.py  test_validation_pack.py  test_verify.py  test_version_sync.py  (+1 more)
(+2749 files in other folders)
