[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stratawave"
version = "0.1.0"
description = "1D Site Response Analysis toolkit with OpenSees adapter"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
  { name = "StrataWave Contributors" }
]
dependencies = [
  "numpy>=2.0",
  "scipy>=1.14",
  "pydantic>=2.8",
  "pyyaml>=6.0.2",
  "typer>=0.16",
  "h5py>=3.12",
  "matplotlib>=3.10",
  "rich>=13.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4",
  "pytest-cov>=5.0",
  "mypy>=1.18",
  "ruff>=0.13",
  "pre-commit>=4.0"
]
reports = [
  "fpdf2>=2.8",
  "pypdf>=5.0"
]
ui = [
  "streamlit>=1.44",
  "plotly>=6.0",
  "pandas>=2.2"
]
web = [
  "fastapi>=0.116",
  "uvicorn[standard]>=0.35",
  "httpx>=0.28"
]

[project.scripts]
StrataWave = "dsra1d.cli.main:app"
stratawave = "dsra1d.cli.main:app"
1dsra = "dsra1d.cli.main:app"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
"dsra1d.web" = ["static/*", "static/vendor/*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
mypy_path = ["python"]
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = [
  "h5py",
  "h5py.*",
  "scipy",
  "scipy.*",
  "streamlit",
  "plotly",
  "plotly.*",
  "yaml",
  "fastapi",
  "fastapi.*",
  "uvicorn",
  "uvicorn.*",
  "starlette",
  "starlette.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["dsra1d.web.app"]
disable_error_code = ["untyped-decorator"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

